Feat: botao para listar_ataques

--- a/app/templates/listar_pokemons.html
+++ b/app/templates/listar_pokemons.html
@@ -6,7 +6,7 @@
     <title>Pokemons</title>
 </head>
 <body>
-    <h1>Pokemons</h1>
+    <h1>Pokemons</h1><a href="{% url 'listar_ataques' %}"><button>Ataques</button></a>
     {% if pokemons %}
     <table border='1'>
         <tr>
