--- a/app/templates/listar_ataques.html
+++ b/app/templates/listar_ataques.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Ataques</h1><a href="{% url 'listar_pokemons' %}"><button>Pokemons</button></a>
     {% if ataques %}
-    <table>
+    <table border='1'>
         <tr>
             <th>Usuario</th>
             <th>ID</th>
