--- a/app/templates/procurar_pokemon.html
+++ b/app/templates/procurar_pokemon.html
@@ -8,9 +8,11 @@
 <body>
     <h1>Procurando Pokemon...</h1>
     <form action="{% url 'criar_pokemon' %}" method="get">
-        {% csrf_token %}
-    <p>Digite o nome ou o ID do pokemon </p>
+    {% csrf_token %}
     {{ form.nome }} <br><br>
+    {% if erro %}
+    <p>{{ erro }}</p>
+    {% endif %}
     <button type="submit">Procurar</button>
     </form>
 </body>
