--- a/app/templates/procurar_troca.html
+++ b/app/templates/procurar_troca.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procurar Pokemon</title>
+    <title>Trocar Pokemon</title>
 </head>
 <body>
-    <h1>Procurando Pokemon...</h1>
+    <h1>Trocar Pokemon</h1>
+    <p>Seu Pokemon: {{ pokemon_atual.nome }} </p>
     <form action="{% url 'atualizar_pokemon' pk=pokemon_atual.pk %}" method="get">
     {% csrf_token %}
-    <p>Pokemon atual: {{ pokemon_atual.nome }} </p>
     <input type="hidden" name="id_pokemon" value="{{ pokemon_atual.id_pokemon }}">
     <input type="hidden" name="nome_pokemon" value="{{ pokemon_atual.nome }}">
     <input type="hidden" name="tipos" value="{{ pokemon_atual.tipos }}">
     <input type="hidden" name="altura" value="{{ pokemon_atual.altura }}">
     <input type="hidden" name="peso" value="{{ pokemon_atual.peso }}">
-    <p>Digite o nome ou o ID do pokemon que voce deseja trocar por </p>
     {{ form.nome }} <br><br>
-    <button type="submit">Procurar</button>
+    {% if erro %}
+    <p>{{ erro }}</p>
+    {% endif %}
+    <button type="submit">Trocar</button>
     </form>
 </body>
 </html>
