--- a/app/templates/atualizar_pokemon.html
+++ b/app/templates/atualizar_pokemon.html
@@ -4,32 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procurar Pokemon</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 </head>
 <body>
-    <h1>MATCH!</h1>
+    <h1 class='titulopagina'>MATCH!</h1>
+    
+    <table class='tabela'>
+        <tr><th>status</th><th>Seu Pokemon</th><th>Pokemon Novo</th></tr>
+        <tr><th>#ID</th><td>{{ pokemon_atual.id_pokemon }}</td><td>{{ pokemon.id_pokemon }}</td></tr>
+        <tr><th>Nome</th><td>{{ pokemon_atual.nome }}</td><td>{{ pokemon.nome }}</td></tr>
+        <tr><th>Tipos</th><td>{{ pokemon_atual.tipos }}</td><td>{{ pokemon.tipos }}</td></tr>
+        <tr><th>Altura(hg)</th><td>{{ pokemon_atual.altura }}</td><td>{{ pokemon.altura }}</td></tr>
+        <tr><th>Peso(dm)</th><td>{{ pokemon_atual.peso }}</td><td>{{ pokemon.peso }}</td></tr>
+    </table>
+    <p>Você tem certeza que quer trocar?</p>
     <form action="{% url 'atualizar_pokemon' pk=pokemon_atual.pk %}" method="post">
     {% csrf_token %}
-    <table border='1'>
-        <tr>
-            <th>status</th>
-            <th>Seu Pokemon</th>
-            <th>Pokemon Novo</th>
-        </tr>
-    
-    <tr><th>#ID</th><td>{{ pokemon_atual.id_pokemon }}</td><td>{{ pokemon.id_pokemon }}</td></tr>
-    <tr><th>Nome</th><td>{{ pokemon_atual.nome }}</td><td>{{ pokemon.nome }}</td></tr>
-    <tr><th>Tipos</th><td>{{ pokemon_atual.tipos }}</td><td>{{ pokemon.tipos }}</td></tr>
-    <tr><th>Altura(hg)</th><td>{{ pokemon_atual.altura }}</td><td>{{ pokemon.altura }}</td></tr>
-    <tr><th>Peso(dm)</th><td>{{ pokemon_atual.peso }}</td><td>{{ pokemon.peso }}</td></tr>
-    </table>
-    <br>
-    <p>Você tem certeza que quer trocar?</p>
     <input type="hidden" name="id_pokemon" value="{{ pokemon.id_pokemon }}">
     <input type="hidden" name="nome" value="{{ pokemon.nome }}">
     <input type="hidden" name="tipos" value="{{ pokemon.tipos }}">
     <input type="hidden" name="altura" value="{{ pokemon.altura }}">
     <input type="hidden" name="peso" value="{{ pokemon.peso }}">
-    <button type="submit">TROCAR</button> | <a href="{% url 'listar_pokemons' %}"><button type="button">CANCELAR</button></a>
+    <button type="submit" class='atualizar'>Trocar</button> | <a href="{% url 'procurar_troca' pk=pokemon_atual.pk %}"><button type="button" class='cancelar'>Cancelar</button></a>
     </form>
 </body>
 </html>
