--- a/app/templates/procurar_troca.html
+++ b/app/templates/procurar_troca.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trocar Pokemon</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 </head>
 <body>
-    <h1>Trocar Pokemon</h1>
-    <p>Seu Pokemon: {{ pokemon_atual.nome }} </p>
-    <form action="{% url 'atualizar_pokemon' pk=pokemon_atual.pk %}" method="get">
-    {% csrf_token %}
-    <input type="hidden" name="id_pokemon" value="{{ pokemon_atual.id_pokemon }}">
-    <input type="hidden" name="nome_pokemon" value="{{ pokemon_atual.nome }}">
-    <input type="hidden" name="tipos" value="{{ pokemon_atual.tipos }}">
-    <input type="hidden" name="altura" value="{{ pokemon_atual.altura }}">
-    <input type="hidden" name="peso" value="{{ pokemon_atual.peso }}">
-    {{ form.nome }} <br><br>
-    {% if erro %}
-    <p>{{ erro }}</p>
-    {% endif %}
-    <button type="submit">Trocar</button>
-    </form>
+    <h1 class='titulopagina'>Trocar Pokemon</h1>
+    <div class='meio'>
+        <div class='mensagem'>
+            <p>Seu Pokemon: {{ pokemon_atual.nome }} </p>
+            <form action="{% url 'atualizar_pokemon' pk=pokemon_atual.pk %}" method="get">
+            {% csrf_token %}
+            <input type="hidden" name="id_pokemon" value="{{ pokemon_atual.id_pokemon }}">
+            <input type="hidden" name="nome_pokemon" value="{{ pokemon_atual.nome }}">
+            <input type="hidden" name="tipos" value="{{ pokemon_atual.tipos }}">
+            <input type="hidden" name="altura" value="{{ pokemon_atual.altura }}">
+            <input type="hidden" name="peso" value="{{ pokemon_atual.peso }}">
+            {{ form.nome }} <br><br>
+            {% if erro %}
+            <p>{{ erro }}</p>
+            {% endif %}
+            <button type="submit" class='atualizar'>Trocar</button> | <a href="{% url 'listar_pokemons' %}"><button type='button' class='cancelar'>Cancelar</button></a>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
