--- a/app/templates/procurar_ataque.html
+++ b/app/templates/procurar_ataque.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procurar Ataque</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 </head>
 <body>
-    <h1>Procuar Ataque</h1>
-    <form action="{% url 'criar_ataque' %}" method="get">
-    {% csrf_token %}
-    {{ form.pokemon.label_tag}}
-    {{ form.pokemon }} <br><br>
-    {{ form.nome }} <br><br>
-    {% if erro %}
-    <p>{{ erro }}</p>
-    {% endif %}
-    <button type="submit">PROCURAR</button> | <a href="{% url 'listar_ataques' %}"><button type='button'>CANCELAR</button></a>
-    </form>
+    <h1 class='titulopagina'>Procuar Ataque</h1>
+    <div class='meio'>
+        <div class='mensagem'> 
+            <form action="{% url 'criar_ataque' %}" method="get">
+            {% csrf_token %}
+            {{ form.pokemon.label_tag}}
+            {{ form.pokemon }} <br><br>
+            {{ form.nome }} <br><br>
+            {% if erro %}
+            <p>{{ erro }}</p>
+            {% endif %}
+            <button type="submit" class='verde'>Procurar</button> | <a href="{% url 'listar_ataques' %}"><button type='button' class='cancelar'>Cancelar</button></a>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
