--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -22,7 +22,7 @@ body {
     padding: 5px;
     background-color: rgb(255, 181, 120);
     box-shadow: 2px 2px 10px 5px rgb(206, 206, 206);
-    width: 850px;
+
 }
 thead{
     background-color: rgb(224, 99, 40);
@@ -66,6 +66,8 @@ button {
     width: 80px;
     font-size: 80%;
     background-color: rgb(194, 189, 189);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 button:hover{
     border: 3px solid black;
@@ -80,7 +82,7 @@ a{
     color: inherit;
 }
 
-input{
+input,select{
     height: 25px;
     width: 140px;
     background-color: rgb(236, 234, 234);
