--- a/app/templates/listar_ataques.html
+++ b/app/templates/listar_ataques.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 </head>
 <body>
-    <h1 class='titulopagina'>Ataques</h1><a href="{% url 'listar_pokemons' %}"><button class='trocar'>Pokemons</button></a>
+    <h1 class='titulopagina'>ATAQUES</h1><a href="{% url 'listar_pokemons' %}"><button class='trocar'>Pokemons</button></a>
     {% if ataques %}
     <table class='tabela'>
         <tr>
