Style: Tamanho tabelas

--- a/app/templates/listar_ataques.html
+++ b/app/templates/listar_ataques.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class='titulopagina'>ATAQUES</h1><a href="{% url 'listar_pokemons' %}"><button class='trocar'>Pokemons</button></a>
     {% if ataques %}
-    <table class='tabela'>
+    <table class='tabelagrande'>
         <tr>
             <th>Usuario</th>
             <th>#</th>
