--- a/app/templates/listar_pokemons.html
+++ b/app/templates/listar_pokemons.html
@@ -11,7 +11,7 @@
     <h1 class="titulopagina">POKÉDEX</h1>
     {% if pokemons %}
     <a href="{% url 'listar_ataques' %}"><button class="trocar">Ataques</button></a>
-    <table class="tabela">
+    <table class="tabelagrande">
         <thead>
             <tr>
                 <th>#</th>
