--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -22,7 +22,14 @@ body {
     padding: 5px;
     background-color: rgb(255, 181, 120);
     box-shadow: 2px 2px 10px 5px rgb(206, 206, 206);
-
+    min-width: 260px;
+}
+.tabelagrande {
+    border: 3px solid rgb(58, 58, 58);
+    padding: 5px;
+    background-color: rgb(255, 181, 120);
+    box-shadow: 2px 2px 10px 5px rgb(206, 206, 206);
+    width: 800px;
 }
 thead{
     background-color: rgb(224, 99, 40);
