Style: botoes e estilos

--- a/app/templates/detalhar_ataque.html
+++ b/app/templates/detalhar_ataque.html
@@ -33,7 +33,7 @@
                 <td><a href="{% url 'deletar_ataque' pk=ataque.pk %}"><button class='deletar'>Esquecer</button></a></td>
             </tr>
     </table>
-        <a href="{% url 'listar_ataques'%}"><button>Voltar</button></a>
+        <a href="{% url 'listar_ataques'%}"><button class='verde'>Voltar</button></a>
     </div>
 </body>
 </html>
