--- a/app/templates/listar_pokemons.html
+++ b/app/templates/listar_pokemons.html
@@ -12,20 +12,18 @@
     {% if pokemons %}
     <a href="{% url 'listar_ataques' %}"><button class="trocar">Ataques</button></a>
     <table class="tabelagrande">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>NOME</th>
-                <th>TIPOS</th>
-                <th>ALTURA(hg)</th>
-                <th>PESO(dm)</th>
-                <th colspan='2'>AÇÕES</th>
-            </tr>
-        </thead>
+        <tr>
+            <th>#</th>
+            <th>NOME</th>
+            <th>TIPOS</th>
+            <th>ALTURA(hg)</th>
+            <th>PESO(dm)</th>
+            <th colspan='2'>AÇÕES</th>
+        </tr>
         {% for pokemon in pokemons %}
         <tr>
-            <td>{{ pokemon.id_pokemon }}</td>
-            <td><a href="{% url 'detalhar_pokemon' pk=pokemon.pk %}">{{ pokemon.nome }}</a></td>
+            <td><a href="{% url 'detalhar_pokemon' pk=pokemon.pk %}"><button class='detalhar'>{{ pokemon.id_pokemon }}</button></a></td>
+            <td>{{ pokemon.nome }}</td>
             <td>{{ pokemon.tipos }}</td>
             <td>{{ pokemon.altura }}</td>
             <td>{{ pokemon.peso }}</td>
