Style: favicon.ico

--- a/app/templates/procurar_ataque.html
+++ b/app/templates/procurar_ataque.html
@@ -6,6 +6,7 @@
     <title>Procurar Ataque</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
     <h1 class='titulopagina'>Procuar Ataque</h1>
