--- a/app/templates/criar_ataque.html
+++ b/app/templates/criar_ataque.html
@@ -6,6 +6,7 @@
     <title>Criar Ataque</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
     <h1>Quer ensinar <i>{{ ataque.nome }}</i> para {{ ataque.pokemon }}</h1>
