--- a/app/templates/detalhar_ataque.html
+++ b/app/templates/detalhar_ataque.html
@@ -6,6 +6,7 @@
     <title>Ataque</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
      <h1>{{ ataque.nome }} - {{ ataque.pokemon }}</h1>
