--- a/app/templates/deletar_ataque.html
+++ b/app/templates/deletar_ataque.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
-    <h1 class='titulopagina'>Esquecer</h1>
+    <h1 class='titulopagina'>Esquecer Ataque</h1>
     <div class='meio'>
         <div class='mensagem'>
             <form method="post">
