--- a/app/templates/listar_pokemons.html
+++ b/app/templates/listar_pokemons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemons</title>
+    <title>POKÉDEX</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
@@ -42,6 +42,5 @@
     {% endif %}
     <br>
     <button class="cadastrar"><a href="{% url 'procurar_pokemon' %}">Procurar</a></button>
-    
 </body>
 </html>
