Feat: link do ataque-usuario detalhar-pokemon

--- a/app/templates/detalhar_ataque.html
+++ b/app/templates/detalhar_ataque.html
@@ -14,8 +14,8 @@
  <table class='tabelagrande'>
         <tr>
             <th>#</th>
-            <th>Usuario</th>
             <th>NOME</th>
+            <th>Usuario</th>
             <th>TIPO</th>
             <th>PP</th>
             <th>POWER</th>
@@ -24,8 +24,8 @@
         </tr>
             <tr>
                 <td><a href="{% url 'detalhar_ataque' pk=ataque.pk %}"><button class='detalhar'>{{ ataque.id_ataque }}</button></a></td>
-                <td>{{ ataque.pokemon }}</td>
                 <td>{{ ataque.nome }}</td>
+                <td><a href="{% url 'detalhar_pokemon' pk=ataque.pokemon.pk %}">{{ ataque.pokemon }}</a></td>
                 <td>{{ ataque.tipo }}</td>
                 <td>{{ ataque.pp }}</td>
                 <td>{{ ataque.power }}</td>
